Update MixinStringPropertyKey.java, TLLaunchWrapper.java, TLMixinBootstrap.java, and 2 more files